--- a/index.html
+++ b/index.html
@@ -158,12 +158,10 @@
           проекту'
         </h2>
         <p class="idea__text">
-          */Ідея проекту Ice Cream - познайомити потенційних клієнтів з мережею магазинів морозива,
-          яке приготовлене з душею. Що б кожен зміг дізнатися більше, про рецептуру, склад та
-          асортимент. На сайті зроблено чудову навігацію. Можна вибрати собі морозиво чи напої, і
-          навіть залишити заявку на франшизу. Проста та одночасно функціональна реалізація проекту
-          дозволяє користувачам поринути у світ морозива, подивитися його склад та купити всього в
-          кілька кліків*/
+          */Ідея проекту "Filmoteka" надати зручну та якісну платформу для вибору та перегляду
+          фільмів. Зручна навігація по сайту, можливість організовувати свій список для майбутніх
+          переглядів, та переглянути минулі. Проста та одночасно функціональна реалізація проекту
+          дозволяє користувачам поринути у світ фільмів, всього в кілька кліків*/
         </p>
       </div>
     </section>
@@ -193,59 +191,40 @@
         </p>
         <ul class="functional__list">
           <li class="functional__item">
-            <p class="functional__name">*/Header/Hero*/</p>
+            <p class="functional__name">*/Header*/</p>
             <p class="functional__text">
-              Поєднує у собі навігацію по сторінці, завдяки кнопкам зверху, фото варіантів продукції
-              та безліч кнопок
+              Поєднує у собі навігацію по сторінці, завдяки кнопкам зверху, зручний пошук за назвою,
+              можливість перейти у свою галерею, клікабельний логотип
             </p>
           </li>
           <li class="functional__item">
-            <p class="functional__name">*/Products*/</p>
+            <p class="functional__name">*/Popular films*/</p>
             <p class="functional__text">
-              Демонструє варіанти продукції, має кнопку з переходом на модальне вікно яке дозволяє
-              подивитися кількість калорій та весь склад продукту
+              Демонструє варіанти популярних фільмів, щоб користувачу не потрібно було шукати нові
+              прем'єри
             </p>
           </li>
           <li class="functional__item">
-            <p class="functional__name">*/How It’s Made*/</p>
+            <p class="functional__name">*/Popular films MODAL*/</p>
             <p class="functional__text">
-              Заключає в собі, головну ідейність створення продукту, його натуральність і кількість
-              видів, а також знайомить нас з головним постачальником сировини.
+              У користувача є можливість дізнатися детальну інформацію про фільм який він вподобав,
+              для цього ліше потрібно клікнути на постер, та перед ним відкриється modal window з
+              усією детальною інформацією, рейтынг/популярність/жанр/опис до фільму. Задля комфорту
+              користувача додані кнопки які додають фільм у "MY LABRARY",додання фільмів до черги
+              ,перегляду трейлера
             </p>
           </li>
           <li class="functional__item">
-            <p class="functional__name">*/Gallery*/</p>
+            <p class="functional__name">*/MY LIBRARY*/</p>
             <p class="functional__text">
-              Слайди які демонструють варіанти коштування цього продукту, та просто гарні зображення
-              які підсилюють жагу скуштувати це морозиво
-            </p>
-          </li>
-          <li class="functional__item">
-            <p class="functional__name">*/Customer review*/</p>
-            <p class="functional__text">
-              Слайди з відгуками відвідувачів та покупців цього продукту
-            </p>
-          </li>
-          <li class="functional__item">
-            <p class="functional__name">*/Contacts*/</p>
-            <p class="functional__text">
-              Картки з повною інформацією про кафе та фудтраки де можна скуштувати цей продукт,
-              включає в себе адресу, години роботи, та контактні данні, дуже зручно, що все в одному
-              місці і не треба шукати по сторінці
+              Додані зручні кнопки за допомогою яких можна зразу перейти у чергу фільмів для
+              перегляду, або в переглянуті фільми щоб порадити друзям
             </p>
           </li>
           <li class="functional__item">
             <p class="functional__name">*/Footer*/</p>
             <p class="functional__text">
-              Об‘єднує у собі девіз компанії, лінки на соц мережі та дубльовані контакти
-            </p>
-          </li>
-          <li class="functional__item">
-            <p class="functional__name">*/Modal Windows*/</p>
-            <p class="functional__text">
-              На цьому проекті маємо 5 модальних вікон, можна подивитися геолокацію, склад та більше
-              інформації про конкретний продукт, подивитися короткий відео ролик про продукцію, та є
-              можливість залишити заявку на франшизу.
+              Простенький та локонічний footer, з посиланням на презентацію нашої команди
             </p>
           </li>
         </ul>
