--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <li class="team__item">
             <img class="team__image" src="./myhaylo.JPG" alt="" width="250" height="250" />
             <div class="team__cards">
-              <h3 class="team__name">Myhaylo</h3>
+              <h3 class="team__name">Mikhail</h3>
               <p class="team__desctiption">HTML/SCSS/JS</p>
               <p class="team__work"></p>
             </div>
