--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
               У користувача є можливість дізнатися детальну інформацію про фільм який він вподобав,
               для цього ліше потрібно клікнути на постер, та перед ним відкриється modal window з
               усією детальною інформацією, рейтынг/популярність/жанр/опис до фільму. Задля комфорту
-              користувача додані кнопки які додають фільм у "MY LABRARY",додання фільмів до черги
+              користувача додані кнопки які додають фільм у "MY LIBRARY",додання фільмів до черги
               ,перегляду трейлера
             </p>
           </li>
