--- a/index.html
+++ b/index.html
@@ -185,46 +185,46 @@
           <span class="const__functional-name">functional =</span> 'Функціонал'
         </h2>
         <p class="functional__description">
-          Ми бачимо перед собою простий та одночасно функціональний сайт, вся інформація надана
+          */Ми бачимо перед собою простий та одночасно функціональний сайт, вся інформація надана
           більш ніж доступно. Користувач може переміщатися в потрібний розділ без зайвої витрати
-          часу на блукання по сторінці - використовуючи кнопки.
+          часу на блукання по сторінці - використовуючи кнопки.*/
         </p>
         <ul class="functional__list">
           <li class="functional__item">
             <p class="functional__name">*/Header*/</p>
             <p class="functional__text">
-              Поєднує у собі навігацію по сторінці, завдяки кнопкам зверху, зручний пошук за назвою,
-              можливість перейти у свою галерею, клікабельний логотип
+              */Поєднує у собі навігацію по сторінці, завдяки кнопкам зверху, зручний пошук за
+              назвою, можливість перейти у свою галерею, клікабельний логотип*/
             </p>
           </li>
           <li class="functional__item">
             <p class="functional__name">*/Popular films*/</p>
             <p class="functional__text">
-              Демонструє варіанти популярних фільмів, щоб користувачу не потрібно було шукати нові
-              прем'єри
+              */Демонструє варіанти популярних фільмів, щоб користувачу не потрібно було шукати нові
+              прем'єри*/
             </p>
           </li>
           <li class="functional__item">
             <p class="functional__name">*/Popular films MODAL*/</p>
             <p class="functional__text">
-              У користувача є можливість дізнатися детальну інформацію про фільм який він вподобав,
-              для цього ліше потрібно клікнути на постер, та перед ним відкриється modal window з
-              усією детальною інформацією, рейтынг/популярність/жанр/опис до фільму. Задля комфорту
-              користувача додані кнопки які додають фільм у "MY LIBRARY",додання фільмів до черги
-              ,перегляду трейлера
+              */У користувача є можливість дізнатися детальну інформацію про фільм який він
+              вподобав, для цього ліше потрібно клікнути на постер, та перед ним відкриється modal
+              window з усією детальною інформацією, рейтынг/популярність/жанр/опис до фільму. Задля
+              комфорту користувача додані кнопки які додають фільм у "MY LIBRARY",додання фільмів до
+              черги ,перегляду трейлера*/
             </p>
           </li>
           <li class="functional__item">
             <p class="functional__name">*/MY LIBRARY*/</p>
             <p class="functional__text">
-              Додані зручні кнопки за допомогою яких можна зразу перейти у чергу фільмів для
-              перегляду, або в переглянуті фільми щоб порадити друзям
+              */Додані зручні кнопки за допомогою яких можна зразу перейти у чергу фільмів для
+              перегляду, або в переглянуті фільми щоб порадити друзям*/
             </p>
           </li>
           <li class="functional__item">
             <p class="functional__name">*/Footer*/</p>
             <p class="functional__text">
-              Простенький та локонічний footer, з посиланням на презентацію нашої команди
+              */Простенький та локонічний footer, з посиланням на презентацію нашої команди*/
             </p>
           </li>
         </ul>
