--- a/index.html
+++ b/index.html
@@ -268,10 +268,13 @@
               <p class="functional__names">ICOMOON</p>
             </li>
             <li class="functional__items">
-              <p class="functional__names">SLICK SLIDER</p>
+              <p class="functional__names">NOTIFLIX</p>
             </li>
             <li class="functional__items">
               <p class="functional__names">PARCEL*/</p>
+            </li>
+            <li class="functional__items">
+              <p class="functional__names">LIGHTBOX*/</p>
             </li>
           </div>
         </section>
