--- a/index.html
+++ b/index.html
@@ -271,10 +271,13 @@
               <p class="functional__names">NOTIFLIX</p>
             </li>
             <li class="functional__items">
-              <p class="functional__names">PARCEL*/</p>
+              <p class="functional__names">PARCEL</p>
             </li>
             <li class="functional__items">
-              <p class="functional__names">LIGHTBOX*/</p>
+              <p class="functional__names">LIGHTBOX</p>
+            </li>
+            <li class="functional__items">
+              <p class="functional__names">AXIOS*/</p>
             </li>
           </div>
         </section>
